--- a/popup.html
+++ b/popup.html
@@ -11,13 +11,15 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
+      <div class="container">
+        <h1>Youtube Transcript CE</h1>
         <p id="quote">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas,
-          magni.
+          Creating any Youtube video CC into Transcript!
         </p>
-        <h3 id="author">Lorem, ipsum.</h3>
-        <button id="btn">Get Quote</button>
+        <h3 id="author">Click button for functions</h3>
+        <button id="btn">Get Random Quote API</button>
         <button id="btn_url">Click here to get current URL</button>
+    </div>
     <!-- Script -->
     <script src="popup.js"></script>
   </body>
